--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,39 @@
-*.FASL
-*.fasl
-*.lisp-temp
-*.dfsl
-*.pfsl
-*.d64fsl
-*.p64fsl
-*.lx64fsl
-*.lx32fsl
-*.dx64fsl
-*.dx32fsl
-*.fx64fsl
-*.fx32fsl
-*.sx64fsl
-*.sx32fsl
-*.wx64fsl
-*.wx32fsl
+
+info.name=Product Service New
+info.version=1.4
+info.description=This service provides restful Web API on the Product Domain Object Development Environment
+management.endpoints.web.exposure.include=*
+
+
+#server.port=0
+spring.application.name=customer-service
+
+#from Spring Boot 2.5 onwards You have enable info explicitly by this property
+management.info.env.enabled=true
+
+#enable all actuator end points
+management.endpoints.web.exposure.include=*
+management.endpoints.jmx.exposure.include=*
+
+
+spring.h2.console.path=/h2-console
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-admin-password=password
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+
+
